// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Content card examples NovaCategoryCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-gap-6 v-align-items-center v-flex v-flex-row v-pb-8"
        valignitemscenter=""
        vflex=""
        vgap="6"
        vpb="8"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-account v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-account-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
          />
        </svg>
        <h3
          class="v-typography-overline"
          style="color: var(--palette-default-active);"
          vtypography="overline"
        >
          Category
        </h3>
      </div>
      <h4
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h4>
      <h5
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h5>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaClickableCardComponent should render correctly 1`] = `
<div>
  <button
    class="v-content-card"
    clickable=""
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-content-card-title-link v-typography-headline-4"
        v-content-card-title=""
        v-content-card-title-link=""
        vtypography="headline-4"
      >
         Headline 
        <svg
          aria-hidden="true"
          class="v-icon-move v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-link-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
          />
        </svg>
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline in more detail.
      </p>
    </div>
  </button>
</div>
`;

exports[`Content card examples NovaClickableCardDisabledComponent should render correctly 1`] = `
<div>
  <button
    aria-disabled="true"
    class="v-content-card"
    clickable=""
    disabled=""
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        <a
          aria-disabled="true"
          class="v-content-card-title-link"
          v-content-card-title-link=""
        >
          Headline
        </a>
        <svg
          aria-hidden="true"
          class="v-icon-move v-icon v-icon-security-lock v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-security-lock-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M9 11.9961H7V8.99609H9V11.9961Z"
          />
          <path
            class="v-icon-primary"
            d="M8 0C10.2091 0 12 1.79086 12 4V5H15V16H1V5H4V4C4 1.79086 5.79086 0 8 0ZM3 14H13V7H3V14ZM8 2C6.89543 2 6 2.89543 6 4V5H10V4C10 2.89543 9.10457 2 8 2Z"
          />
        </svg>
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline in more detail.
      </p>
    </div>
  </button>
</div>
`;

exports[`Content card examples NovaCompactCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card v-content-card-border-block-end"
    indicator="true"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaCompactDashboardCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    style="inline-size: 500px;"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-between"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
      >
        <h3
          class="v-content-card-title v-typography-headline-4"
          v-content-card-title=""
          vtypography="headline-4"
        >
          <span
            class="v-align-self-end v-flex v-flex-row"
            valignselfend=""
            vflex=""
          >
            Headline
          </span>
        </h3>
      </div>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <span
          class="v-typography-display-2"
          style="color: var(--palette-messaging-text-positive);"
          vtypography="display-2"
        >
           0,000 
        </span>
        <div
          class="v-gap-4 v-align-content-end v-align-items-center v-flex v-flex-col v-mt-8"
          valigncontentend=""
          valignitemscenter=""
          vflex=""
          vflexcol=""
          vgap="4"
          vmt="8"
        >
          <svg
            aria-hidden="false"
            aria-labelledby="compact-dashboard-title compact-dashboard-label"
            class="v-icon v-icon-arrow-up v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-arrow-up-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <title
              id="compact-dashboard-title"
            >
              increasing value
            </title>
            <path
              class="v-icon-primary"
              d="M15.7041 7.79736L14.29 9.21143L8.99704 3.91846V16.0044H6.99704V3.91846L1.70407 9.21143L0.290009 7.79736L7.99704 0.090332L15.7041 7.79736Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  transform="translate(0 0.000488281)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
          <span
            aria-hidden="true"
            id="compact-dashboard-label"
          >
            Label
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaDefaultCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaDefaultDashboardCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    style="inline-size: 500px;"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-gap-6 v-align-items-center v-flex v-flex-row v-pb-8"
        valignitemscenter=""
        vflex=""
        vgap="6"
        vpb="8"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-security-lock v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-security-lock-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C13.65 12 15 13.35 15 15C15 16.3 14.16 17.4201 13 17.8301V20H11V17.8301C9.84 17.4201 9 16.3 9 15C9 13.35 10.35 12 12 12ZM12 14C11.45 14 11 14.45 11 15C11 15.55 11.45 16 12 16C12.55 16 13 15.55 13 15C13 14.45 12.55 14 12 14Z"
          />
          <path
            class="v-icon-primary"
            d="M15 8V5C15 3.35 13.65 2 12 2C10.35 2 9 3.35 9 5V8H15ZM4 22H20V10H4V22ZM22 24H2V8H7V5C7 2.24 9.24 0 12 0C14.76 0 17 2.24 17 5V8H22V24Z"
          />
        </svg>
        <span
          class="v-typography-overline"
          style="color: var(--palette-default-active);"
          vtypography="overline"
        >
           Category 
        </span>
      </div>
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <img
        alt="a colorful bar chart"
        class="v-content-card-image"
        src="imgs/content-card.png"
        style="inline-size: 100%; block-size: auto; object-fit: contain; background-color: transparent;"
        v-content-card-image=""
      />
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaDefaultWithUIButtonsCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-between"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
      >
        <h3
          class="v-content-card-title v-typography-headline-4"
          v-content-card-title=""
          vtypography="headline-4"
        >
          <span
            class="v-align-self-end v-flex v-flex-row"
            valignselfend=""
            vflex=""
          >
            Headline
          </span>
        </h3>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <button
            aria-label="Export <Headline>"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-button-icon v-button-small v-button-tertiary"
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-share v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-share-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-secondary"
                d="M4 7H2V14H14V7H12V5H16V16H0V5H4V7Z"
              />
              <path
                class="v-icon-primary"
                d="M7.2373 0.292969C7.65866 -0.0974171 8.34134 -0.097417 8.7627 0.292969L12 3.29297L10.4736 4.70703L9.0791 3.41406V12H6.9209V3.41406L5.52637 4.70703L4 3.29297L7.2373 0.292969Z"
              />
            </svg>
          </button>
          <button
            aria-label="More information about <Headline>"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-button-icon v-button-small v-button-tertiary"
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-information v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-information-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM6 7V9H7V11H6V13H10V11H9V7H6ZM7 3V5H9V3H7Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </div>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaIconCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-flex v-flex-row v-pb-12"
        vflex=""
        vpb="12"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-high v-icon-security-lock v-icon-visa"
          focusable="false"
          height="48"
          v-icon-visa-security-lock-high=""
          viewBox="0 0 48 48"
          width="48"
        >
          <path
            class="v-icon-secondary"
            d="M24 25C26.7614 25 29 27.2386 29 30C29 31.4482 28.3843 32.7529 27.4004 33.666L29 40H19L20.5996 33.666C19.6157 32.7529 19 31.4482 19 30C19 27.2386 21.2386 25 24 25ZM24 27C22.3431 27 21 28.3431 21 30C21 30.869 21.3668 31.6497 21.96 32.2002L22.8291 33.0059L21.5674 38H26.4326L25.1709 33.0059L26.04 32.2002C26.6332 31.6497 27 30.869 27 30C27 28.3431 25.6569 27 24 27Z"
          />
          <path
            class="v-icon-primary"
            d="M24 0C30.6274 0 36 5.37258 36 12V16H42V48H6V16H12V12C12 5.37258 17.3726 0 24 0ZM8 21H13V23H8V26H13V28H8V31H13V33H8V36H13V38H8V41H13V43H8V46H40V18H8V21ZM24 2C18.4772 2 14 6.47715 14 12V16H16V12C16 7.58172 19.5817 4 24 4C28.4183 4 32 7.58172 32 12V16H34V12C34 6.47715 29.5228 2 24 2ZM24 6C20.6863 6 18 8.68629 18 12V16H30V12C30 8.68629 27.3137 6 24 6Z"
          />
        </svg>
      </div>
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <hr
        class="v-divider"
        v-divider=""
      />
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaImageCardComponent should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    style="inline-size: 50vw;"
    v-content-card=""
  >
    <img
      alt=""
      class="v-content-card-image"
      src="imgs/content-card.png"
      style="inline-size: 100%; block-size: auto; object-fit: contain; overflow: hidden;"
      v-content-card-image=""
    />
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 2.47607L6.21387 8.00049L1 13.5249L2.39355 15.0005L9 8.00049L2.39355 1.00049L1 2.47607Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
